@@ -1,0 +1,6 @@
+class PyRRDError(Exception):
+    pass
+
+
+class ExternalCommandError(PyRRDError):
+    pass
